# lactuca

./: LICENSE  LICENSE_DOCS  README.md  citing.html  eula.html  eula_es.html  formulas.html  index.html  pyproject.toml  searchindex.js  versions.json
.doctrees/: activation.doctree  citing.doctree  errors_reference.doctree  pricing.doctree  privacy_es.doctree  support.doctree
.doctrees/api/: base.doctree  functional.doctree  table_builder.doctree  utils.doctree
.doctrees/user_guide/: batch_calculations.doctree  commutation_functions.doctree  inspecting_cashflows.doctree  irregular_cashflows.doctree  last_payment_adjustment.doctree  prospective_reserve.doctree
api/: decrement_table.html  index.html  interest_rate.html  table_builder.html  utils.html
docs/: activation.md  changelog.md  citing.md  conf.py  cookbook.md  errors_reference.md  eula.md  eula_es.md  faq_licensing.md  formulas.md  index.md  pricing.md  privacy.md  privacy_es.md  support.md
docs/_static/: custom.css  versions.json
docs/api/: base.md  config.md  dates.md  decrement_table.md  disability_table.md  exit_table.md  functional.md  growth_rate.md  index.md  interest_rate.md  life_table.md  table_builder.md  table_source.md  utils.md
docs/user_guide/: batch_calculations.md  building_tables.md  bundled_tables.md  calculation_modes.md  commutation_functions.md  configuration.md  dates_guide.md  decimals_rounding.md  deferment.md  force_mortality_methods.md  functional_api.md  getting_started.md  growth_conventions.md  growth_rates_guide.md  index.md  inspecting_cashflows.md  interest_rates_guide.md  irregular_cashflows.md  joint_life_calculations.md  last_payment_adjustment.md  life_annuities_guide.md  life_insurances_guide.md  lx_interpolation.md  modifying_decrements.md  mortality_improvement.md  notation_glossary.md  numerical_precision.md  probable_flows.md  prospective_reserve.md  qx_derivation_flow.md  tables_taxonomy.md  using_tables.md
latest/: .buildinfo  CNAME  activation.html  errors_reference.html  faq_licensing.html  pricing.html  privacy_es.html  versions.json
latest/.doctrees/: changelog.doctree  eula.doctree  formulas.doctree
latest/.doctrees/api/: config.doctree  disability_table.doctree  growth_rate.doctree  interest_rate.doctree  table_source.doctree
latest/.doctrees/user_guide/: calculation_modes.doctree  configuration.doctree  force_mortality_methods.doctree  functional_api.doctree  index.doctree  life_annuities_guide.doctree  life_insurances_guide.doctree  mortality_improvement.doctree  notation_glossary.doctree  numerical_precision.doctree
latest/_static/: pygments.css  versions.json
latest/api/: dates.html  disability_table.html  growth_rate.html
latest/user_guide/: building_tables.html  decimals_rounding.html  index.html  interest_rates_guide.html  last_payment_adjustment.html  modifying_decrements.html  notation_glossary.html  qx_derivation_flow.html  using_tables.html
user_guide/: bundled_tables.html  calculation_modes.html  commutation_functions.html  configuration.html  dates_guide.html  force_mortality_methods.html  functional_api.html  growth_conventions.html  inspecting_cashflows.html  irregular_cashflows.html  joint_life_calculations.html  life_annuities_guide.html  mortality_improvement.html  probable_flows.html  prospective_reserve.html
v0.0.31-test/: changelog.html  cookbook.html  genindex.html  objects.inv  privacy.html  search.html  support.html
v0.0.31-test/.doctrees/: cookbook.doctree  environment.pickle  eula_es.doctree  faq_licensing.doctree  index.doctree  privacy.doctree
v0.0.31-test/.doctrees/api/: dates.doctree  decrement_table.doctree  exit_table.doctree  index.doctree  life_table.doctree
v0.0.31-test/.doctrees/user_guide/: building_tables.doctree  bundled_tables.doctree  dates_guide.doctree  decimals_rounding.doctree  deferment.doctree  getting_started.doctree  growth_conventions.doctree  growth_rates_guide.doctree  interest_rates_guide.doctree  joint_life_calculations.doctree  lx_interpolation.doctree  modifying_decrements.doctree  probable_flows.doctree  qx_derivation_flow.doctree  tables_taxonomy.doctree  using_tables.doctree
v0.0.31-test/api/: base.html  config.html  exit_table.html  functional.html  life_table.html  table_source.html
v0.0.31-test/user_guide/: batch_calculations.html  deferment.html  getting_started.html  growth_rates_guide.html  life_insurances_guide.html  lx_interpolation.html  numerical_precision.html  tables_taxonomy.html
