[build-system]
requires = [
  "scikit-build-core>=0.11",
  "setuptools>=61.0",
  "wheel",
  "cython>=3.0.3",
  "numpy>=2.3.0,<3.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "lactuca"
version = "0.0.1"
description = "Professional actuarial library for Python with compiled performance and Spanish/international tables"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [
  { name = "Alberto Aragoneses", email = "alberto.aragoneses@actuaan.com" }
]
maintainers = [
  { name = "Alberto Aragoneses", email = "alberto.aragoneses@actuaan.com" }
]
license = "LicenseRef-Proprietary"
license-files = ["LICENSE", "LICENSE_DOCS"]
keywords = ["actuarial", "life-insurance", "mortality", "annuity", "tables", "spain", "pasem", "cython"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Cython",
  "Operating System :: OS Independent",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]

dependencies = [
  "msgpack>=1.1.0",
  "numpy>=2.3.0,<3.0",
  "pandas>=2.3.0,<3.0",
  "polars>=1.34.0,<2.0",
  "scipy>=1.16.0,<2.0",
  "tomli>=2.0.0; python_full_version < '3.11'",
  "tomli-w>=1.0.0",
]

[project.urls]
Homepage = "https://lactuca.dev"
Documentation = "https://actuaan.github.io/lactuca/latest/"
Repository = "https://github.com/actuaan/lactuca-dev"
"Public Repository" = "https://github.com/actuaan/lactuca"
Issues = "https://github.com/actuaan/lactuca/issues"
Changelog = "https://actuaan.github.io/lactuca/latest/changelog.html"

[project.optional-dependencies]
docs = [
  "sphinx>=7.0,<9.0",
  "pydata-sphinx-theme>=0.15.2",
  "myst-parser>=2.0",
  "sphinx-autodoc-typehints>=1.25",
  "sphinx-copybutton>=0.5",
  "sphinx-design>=0.5",
  "sphinxext-opengraph",
  "sphinxcontrib-mermaid>=0.9",
]
dev = [
  "commitizen>=3.0",
  "git-cliff>=2.0",
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ipykernel",
  "build",
  "twine",
  "ruff",
  "pyright"
]

# ============================================================================
# scikit-build-core configuration
# ============================================================================
[tool.scikit-build]
cmake.version = ">=3.20"
cmake.build-type = "Release"
cmake.args = [
  "-DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON",
]

wheel.exclude = [
    "**.py",            # Excluir .py de wheels
    "!**/__init__.py",  # Excepto __init__.py
    "**.pyc",
    "**/__pycache__",
]
install.components = ["runtime"]

# ============================================================================
# Commitizen configuration (versionado automático)
# ============================================================================
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = false  # git-cliff lo genera
version_provider = "pep621"
annotated_tag = true

# ============================================================================
# cibuildwheel configuration (wheels multi-platform)
# ============================================================================
[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux_* *-win32"
build-verbosity = 3

[tool.cibuildwheel.environment]
CYTHON_SECURITY_PROFILE = "STRICT"

# ============================================================================
# Ruff configuration
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = [
  "E501",   # Line too long (handled by formatter)
  "UP007",  # Use X | Y for Union (not compatible with Cython; use Union[X, Y])
]
per-file-ignores = { "src/lactuca/tables/life.py" = ["N802", "N806"], "src/lactuca/engine/insurance.py" = ["N806"], "src/lactuca/config.py" = ["N802"], "src/lactuca/tables/exit.py" = ["N802"], "src/lactuca/tables/disability.py" = ["N802"], "tests/**/*.py" = ["N802", "N806"], "src/lactuca/functional.py" = ["N802"] }

# ============================================================================
# Pytest configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-s -ra --strict-markers"
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "benchmark: marks tests as benchmarks (run with pytest-benchmark)",
]


